tests/bad/constants_infer.oc
/// fail: Constant must have a type

const X = 1
const Y = X + 1

def main() {
    println(`{Y}`)
}